--- a/index.html
+++ b/index.html
@@ -1,58 +1,35 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>predental.github.io by predental</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>predental.github.io</h1>
-        <p></p>
-
-
-        <p class="view"><a href="https://github.com/predental">View My GitHub Profile</a></p>
-
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
-</html>
+<head>
+	<title>Delta Delta Sigma</title>
+	<script src="jquery.min.js"></script>
+	<script src="main.js"></script>
+</head>
+<body>
+	<section id="javascript">If this message appears after reloading, your browser may not have JavaScript enabled.</section>
+	<section id="main">
+		<div class="nav">
+			<!-- <a href="index.html"><img src="images/logo_white.png"></a> -->
+			<ul>
+				<li><a href="about.html">About</a></li>
+				<li><a href="events.html">Events</a></li>
+				<li><a href="resources.html">Resources</a></li>
+				<li class="button"><a href="join.html">Join</a></li>
+				<!-- <li><a href="#">Menu <i class="material-icons">menu</i></a></li> -->
+			</ul>
+		</div>
+		<div class="title">
+			<h1>Delta Delta Sigma</h1>
+			<h2>The University of Washington's Pre-Dental Society</h2>
+		</div>
+		<a href="#about" class="smoothscroll"><i class="material-icons arrow-down">keyboard_arrow_down</i></a>
+	</section>
+	<section id="about">
+		<div class="container">
+			<h1>About</h1>
+			<p>The mission of Delta Delta Sigma is to introduce students to the dental profession and provide a helpful environment for success in their pre-dental academics. The academic road to dental school is difficult and demanding, sometimes even confusing. Delta Delta Sigma's goal is to make that journey as attainable and easy as possible. Delta Delta Sigma is open to all students of all schools and gives equal opportunities to everyone. As students, our focus is to learn about the world around us. But in addition, we need to help each other learn as well. By building a community of students with similar interests, we can work together and all achieve our goals.</p>
+			<p>All actions and decisions made by the officers of Delta Delta Sigma are based upon the club's Constitution and Bylaws. If any actions or decisions are made that are in conflict with the Constitution and Bylaws, they are subject to review by the club officers and advisors.</p>
+			<h1>Upcoming Events</h1>
+			<p>The mission of Delta Delta Sigma is to introduce students to the dental profession and provide a helpful environment for success in their pre-dental academics. The academic road to dental school is difficult and demanding, sometimes even confusing. Delta Delta Sigma's goal is to make that journey as attainable and easy as possible. Delta Delta Sigma is open to all students of all schools and gives equal opportunities to everyone. As students, our focus is to learn about the world around us. But in addition, we need to help each other learn as well. By building a community of students with similar interests, we can work together and all achieve our goals.</p>
+			<p>All actions and decisions made by the officers of Delta Delta Sigma are based upon the club's Constitution and Bylaws. If any actions or decisions are made that are in conflict with the Constitution and Bylaws, they are subject to review by the club officers and advisors.</p>
+		</div>
+	</section>
+</body>
