--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <head>
 	<title>About | Delta Delta Sigma</title>
-	<script src="jquery.min.js"></script>
-	<script src="main.js"></script>
+	<script src="javascripts/jquery.min.js"></script>
+	<script src="javascripts/main.js"></script>
 </head>
 <body>
 	<section id="javascript">If this message appears after reloading, your browser may not have JavaScript enabled.</section>
