Updated files for website

--- a/events.html
+++ b/events.html
@@ -2,28 +2,16 @@
 	<title>Events | Delta Delta Sigma</title>
 	<script src="javascripts/jquery.min.js"></script>
 	<script src="javascripts/main.js"></script>
+	<section id="javascript">If this message appears after reloading, your browser may not have JavaScript enabled.</section>
 </head>
 <body>
-	<section id="javascript">If this message appears after reloading, your browser may not have JavaScript enabled.</section>
 	<section id="nav"></section>
 	<section id="events">
 		<div class="container">
 			<h1>Upcoming Events</h1>
-			<h2>University of Washington School of Dentistry: Sue Coldwell's Admission Talk</h2>
-			<h3>Wednesday, April 27, from 5:30-6:30 PM in <a href="http://www.washington.edu/maps/#!/meb" target="_blank">MEB 246</a></h3>
-			<h2>Admissions Overview from Accepted Students</h2>
-			<h3>Wednesday, May 4, from 5:30-6:30 PM in <a href="http://www.washington.edu/maps/#!/meb" target="_blank">MEB 246</a></h3>
-			<h2>University of Pacific: Visit from Director of Admissions</h2>
-			<h3>Wednesday, May 11, from 5:30-6:30 PM in <a href="http://www.washington.edu/maps/#!/meb" target="_blank">MEB 246</a></h3>
-			<h2>Elections and Gold Member Recognition</h2>
-			<h3>Wednesday, May 18, from 5:30-6:30 PM in <a href="http://www.washington.edu/maps/#!/meb" target="_blank">MEB 246</a></h3>
+			<span id="upcoming"></span>
 			<h1>Volunteer Opportunities</h1>
-			<h2>Relay for Life Fundraiser: Molar Bearz</h2>
-			<h3>Saturday, May 21</h3>
-			<h2>Friday Feasts with ROOTS</h2>
-			<h3>Friday April 29, 4:30-7:00 PM at <a href="https://www.google.com/maps/place/1415+NE+43rd+St,+Seattle,+WA+98105/@47.6592479,-122.3145446,17z/data=!3m1!4b1!4m2!3m1!1s0x5490148b4f6b6617:0xd9007ef2253841c8" target="_blank">1415 NE 43rd St Seattle</a> (Alley entrance) by MOD Pizza</h3>
-			<h2>Friday Feasts with ROOTS</h2>
-			<h3>Friday May 6, 4:30-7:00 PM at <a href="https://www.google.com/maps/place/1415+NE+43rd+St,+Seattle,+WA+98105/@47.6592479,-122.3145446,17z/data=!3m1!4b1!4m2!3m1!1s0x5490148b4f6b6617:0xd9007ef2253841c8" target="_blank">1415 NE 43rd St Seattle</a> (Alley entrance) by MOD Pizza</h3>
+			<span id="volunteer"></span>
 		</div>
 	</section>
 </body>
