--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 	<title>Delta Delta Sigma</title>
 	<script src="javascripts/jquery.min.js"></script>
 	<script src="javascripts/main.js"></script>
+	<section id="javascript">If this message appears after reloading, your browser may not have JavaScript enabled.</section>
 </head>
 <body>
-	<section id="javascript">If this message appears after reloading, your browser may not have JavaScript enabled.</section>
 	<section id="main">
 		<div class="nav">
 			<!-- <a href="index.html"><img src="images/logo_white.png"></a> -->
@@ -13,14 +13,13 @@
 				<li><a href="events.html">Events</a></li>
 				<li><a href="resources.html">Resources</a></li>
 				<li class="button"><a href="join.html">Join</a></li>
-				<!-- <li><a href="#">Menu <i class="material-icons">menu</i></a></li> -->
 			</ul>
 		</div>
 		<div class="title">
 			<h1>Delta Delta Sigma</h1>
 			<h2>The University of Washington's Pre-Dental Society</h2>
 		</div>
-		<a href="#about" class="smoothscroll"><i class="material-icons arrow-down">keyboard_arrow_down</i></a>
+		<a href="#about"><i class="material-icons arrow-down">keyboard_arrow_down</i></a>
 	</section>
 	<section id="about">
 		<div class="container">
