Updated files for website

--- a/events.html
+++ b/events.html
@@ -12,6 +12,9 @@
 			<span id="upcoming"></span>
 			<h1>Volunteer Opportunities</h1>
 			<span id="volunteer"></span>
+			<h1>Past Events & Volunteer Opportunities</h1>
+			<h3><a href="javascript: $('#events #past').css('display', 'block'); $('#events #show').hide();" id="show">Click here to display events and volunteer opportunities from the past year</a></h3>
+			<span id="past" style="display: none"></span>
 		</div>
 	</section>
 </body>
