Updated files for website

--- a/events.html
+++ b/events.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 	<section id="nav"></section>
-	<section id="events">
+	<section>
 		<div class="container">
-			<h1>Upcoming Events</h1>
+			<h1 id="upcoming">Upcoming Events</h1>
 			<span id="upcoming"></span>
-			<h1>Volunteer Opportunities</h1>
+			<h1 id="volunteer">Volunteer Opportunities</h1>
 			<span id="volunteer"></span>
-			<h1>Past Events & Volunteer Opportunities</h1>
-			<h3><a href="javascript: $('#events #past').css('display', 'block'); $('#events #show').hide();" id="show">Click here to display events and volunteer opportunities from the past year</a></h3>
+			<h1 id="past">Past Events & Volunteer Opportunities</h1>
 			<span id="past" style="display: none"></span>
+			<h3><a href="javascript: $('span#past').css('display', 'block'); $('#show').hide();" id="show">Click here to display events and volunteer opportunities from the past year</a></h3>
 		</div>
 	</section>
 </body>
