--- a/about.html
+++ b/about.html
@@ -6,10 +6,13 @@
 </head>
 <body>
 	<section id="nav"></section>
-	<section id="officers">
+	<section>
 		<div class="container">
-			<h1>Current Officers</h1>
-			<table>
+			<h1 id="mission">Mission</h1>
+			<p>The mission of Delta Delta Sigma is to introduce students to the dental profession and provide a helpful environment for success in their pre-dental academics. The academic road to dental school is difficult and demanding, sometimes even confusing. Delta Delta Sigma's goal is to make that journey as attainable and easy as possible. Delta Delta Sigma is open to all students of all schools and gives equal opportunities to everyone. As students, our focus is to learn about the world around us. But in addition, we need to help each other learn as well. By building a community of students with similar interests, we can work together and all achieve our goals.</p>
+			<p>All actions and decisions made by the officers of Delta Delta Sigma are based upon the club's Constitution and Bylaws. If any actions or decisions are made that are in conflict with the Constitution and Bylaws, they are subject to review by the club officers and advisors.</p>
+			<h1 id="officers">Current Officers</h1>
+			<table id="officers">
 				<tr>
 					<th>
 						<h2>Manvir Kaur</h2>
