Updated files for website

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<p>All actions and decisions made by the officers of Delta Delta Sigma are based upon the club's Constitution and Bylaws. If any actions or decisions are made that are in conflict with the Constitution and Bylaws, they are subject to review by the club officers and advisors.</p>
 			<h1 id="events">Upcoming Events</h1>
 			<span id="events_short"></span>
-			<h3 style="color: rgb(100, 100, 100); font-style: italic; text-align: center">Only some events are listed here. See the <a href="events.html">events</a> page for all events.</h3>
+			<h3 style="color: rgb(100, 100, 100); font-style: italic; padding-top: 5px; text-align: center;">Only some events are listed here. See the <a href="events.html">events</a> page for all events.</h3>
 		</div>
 	</section>
 </body>
