--- a/join.html
+++ b/join.html
@@ -6,4 +6,19 @@
 </head>
 <body>
 	<section id="nav"></section>
+	<section>
+		<div class="container">
+			<h1 id="application">Application</h1>
+			<h3>Download the application for Delta Delta Sigma <a target="blank_" href="files/application.pdf">here</a>.</h3>
+			<p>Application for Delta Delta Sigma membership is non-competitive. Annual dues are $15.00, accepted as cash or check (payable to Delta Delta Sigma), and may be submitted with the application at any Delta Delta Sigma event. Alternatively, you may contact <a target="blank_" href="mailto:dental@uw.edu">dental@uw.edu</a> to arrange a meeting with one of the officers.</p>
+			<h1 id="benefits">Benefits</h1>
+				<ul>
+					<li>Receive announcements given only to members, such as dental student panels and volunteer opportunites
+					<li>10% off on any Kaplan (test prep) classroom course</li>
+					<li>Ability to run for next year's officer positions</li>
+					<li>D.D.S. is the biggest pre-dental club on UW campus, allowing you plenty of opportunities to meet fellow pre-dental students and learn more about what being a dentist entails</li>
+					<li>Free food provided at meetings!</li>
+				</ul>
+		</div>
+	</section>
 </body>
