Updated files for website

--- a/about.html
+++ b/about.html
@@ -9,128 +9,127 @@
 	<section>
 		<div class="container">
 			<h1 id="mission">Mission</h1>
-			<p>The mission of Delta Delta Sigma is to introduce students to the dental profession and provide a helpful environment for success in their pre-dental academics. The academic road to dental school is difficult and demanding, sometimes even confusing. Delta Delta Sigma's goal is to make that journey as attainable and easy as possible. Delta Delta Sigma is open to all students of all schools and gives equal opportunities to everyone. As students, our focus is to learn about the world around us. But in addition, we need to help each other learn as well. By building a community of students with similar interests, we can work together and all achieve our goals.</p>
-			<p>All actions and decisions made by the officers of Delta Delta Sigma are based upon the club's Constitution and Bylaws. If any actions or decisions are made that are in conflict with the Constitution and Bylaws, they are subject to review by the club officers and advisors.</p>
+			<p>The mission of Delta Delta Sigma is to introduce students to the dental profession and provide a helpful environment for success in their pre-dental academics.</p>
+			<p>The academic road to dental school is difficult and demanding, sometimes even confusing. Delta Delta Sigma's goal is to make that journey as attainable and easy as possible. Delta Delta Sigma is open to all students of all schools and gives equal opportunities to everyone.</p>
+			<p>As students, our focus is to learn about the world around us. But in addition, we need to help each other learn as well. By building a community of students with similar interests, we can work together and all achieve our goals.</p>
+			<em>All actions and decisions made by the officers of Delta Delta Sigma are based upon the club's <a href="files/constitution.pdf" target="_blank">Constitution and Bylaws</a>. If any actions or decisions are made that are in conflict with the Constitution and Bylaws, they are subject to review by the club officers and advisors.</em>
 			<h1 id="officers">Current Officers</h1>
 			<table id="officers">
 				<tr>
 					<th>
-						<h2>Manvir Kaur</h2>
-						<h3>President, Senior Majoring in Biology</h3>
+						<h2>Chae Mok</h2>
+						<h3>President, Senior Majoring in Biochemistry</h3>
 					</th>
 					<th>
-						<h2>Chae Mok</h2>
-						<h3>Vice President, Junior Majoring in Biochemistry</h3>
+						<h2>Dina Bassyiouni</h2>
+						<h3>Vice President, Senior Majoring in Medical Anthropology &amp; Global Health, Communication</h3>
 					</th>
 				</tr>
 				<tr>
 					<td>
 						<span class="imagetogif">
-							<img src="images/cat.png" class="image">
-							<img src="images/cat.gif" class="gif">
+							<img src="images/chae.png" class="image">
+							<img src="images/chae.png" class="gif">
 						</span>
-						<p>I am passionate about dentistry, and healthcare in general, because of the greater good I see the healthcare providers in my community doing for us. In my opinion, one of the best ways to help others is through health care and medicine, which is why I have always wanted to go into the health care field. I always loved going to the dentist growing up, and as I grew older and learned more about the field of dentistry I realized that I wanted to contribute to the profession. Dentistry helps make peoples lives comfortable and boost their confidence. It would be the most rewarding experience if I could help put a confident smile on someones face!</p>
-						<p>I was obsessed with collecting pencils as a child, and still have over a hundred unsharpened ones at home.</p>
-						<p>Contact Manvir at <a href="mailto:manvirk@uw.edu">manvirk@uw.edu</a>.</p>
-					</td>
-					<td>
-						<span class="imagetogif">
-							<img src="images/cat.png" class="image">
-							<img src="images/cat.gif" class="gif">
-						</span>
-						<p>Throughout my childhood and teenage years, I had always had severely crooked teeth. This degraded my self-esteem so much that I was afraid of expressing joy because of the way my teeth looked. During my orthodontic treatment, I realized that as my smile straightened, I began to express myself through more than just a smile, but with my actions as well. Dentistry is an enabling career that opens doors for patients like myself, and I aspire to open doors for others.</p>
-						<p>I have self-diagnosed trypophobia which is a fear of irregularly patterned holes.</p>
+						<p>Chae comes from the not-so-far-away town of Mukilteo. As president of DDS, Chae aspires to provide ample educational opportunities for fellow pre-dental students to learn about the field from all different angles. In doing so, she hopes to share one of the many aspects she loves about dentistry: the diverse paths that the field offers.</p>
+						<p>After a summer of traveling around Europe, she has fallen in love with exploring new cultures, cuisines, and lifestyles. When she isn't getting lost in foreign countries, you can find her exploring new coffee shops around Seattle, taking pictures of cool architecture, and annoying her friends with amazing puns.</p>
 						<p>Contact Chae at <a href="mailto:chaemok@uw.edu">chaemok@uw.edu</a>.</p>
 					</td>
+					<td>
+						<span class="imagetogif">
+							<img src="images/dina.png" class="image">
+							<img src="images/dina.png" class="gif">
+						</span>
+						<p>My perspective of dentistry changed after an amazing dental visit and I knew right after that I wanted to become a dentist. My favorite thing about dentistry is the hand dexterity aspect and being able to get to know my patients on a personal level. I love going swimming and biking when the weather is nice. When it's not, I like to draw and paint Arabic calligraphy.</p>
+						<!-- <p>Contact Dina at <a href="mailto:dental@uw.edu">dental@uw.edu</a>.</p> -->
+					</td>
 				</tr>
 				<tr>
 					<th>
-						<h2>Glendy Gallardo</h2>
-						<h3>Treasurer, Senior Majoring in Molecular, Cellular, Developmental Biology</h3>
+						<h2>Lewis Luo</h2>
+						<h3>Treasurer, Senior Majoring in Finance &amp; Neurobiology</h3>
 					</th>
 					<th>
 						<h2>Joelle Moussi</h2>
-						<h3>Secretary, Junior Majoring in Microbiology</h3>
+						<h3>Secretary, Senior Majoring in Microbiology</h3>
 					</th>
 				</tr>
 				<tr>
 					<td>
 						<span class="imagetogif">
-							<img src="images/cat.png" class="image">
-							<img src="images/cat.gif" class="gif">
+							<img src="images/lewis.png" class="image">
+							<img src="images/lewis.png" class="gif">
 						</span>
-						<p>As a child, I grew up enjoying going to the dentist and I think it was because I never had a bad experience with them. They were kind, compassionate, and made me laugh. Although there was the occasional filling and necessary shots, I never felt unsafe. I want to be able to give that same experience to someone else and to break the stereotype of hating to go to the dentist. Being a dentist means making an impact on a person's life and health all starting with a smile!</p>
-						<p>I love playing music! I can play five instruments and most of all, I love to sing.</p>
-						<p>Contact Glendy at <a href="mailto:glendyg@uw.edu">glendyg@uw.edu</a>.</p>
+						<p>Lewis is this year's Treasurer, and hopes to help DDS maximize the number of awesome events with efficient budgeting of its resources! He is a senior majoring in Neurobiology and Finance, and enjoys dentistry because of the combination of art, science, and business involved in a dental practice. He hails from the distant lands of approximately 15 miles away from UW Seattle. Lewis loves spicy food and fishing and partakes in swimming, hiking, and rowing until he gets tired and wants to quit.</p>
+						<p>Contact Lewis at <a href="mailto:louislou@uw.edu">louislou@uw.edu</a>.</p>
 					</td>
 					<td>
 						<span class="imagetogif">
-							<img src="images/cat.png" class="image">
-							<img src="images/cat.gif" class="gif">
+							<img src="images/joelle.png" class="image">
+							<img src="images/joelle.png" class="gif">
 						</span>
-						<p>I began my interest in dentistry at a very young age&mdash;in first grade I was a dentist for career day! As I got older, I became passionate about the field when I started shadowing and volunteering various dentists, eventually becoming a dental assistant; hands-on experience has reassured me that dentistry is still something I am very excited about. Through assisting various surgical procedures, I learned that my favorite aspect of dentistry is being able to see the applications of biocompatibility and its potential benefits in the future of both technology and oral health care.</p>
-						<p>I have karaoke dance parties by myself in my garage.</p>
+						<p>Joelle is a Lebanese American who was born and raised in Washington. As secretary, she plans to integrate tools used by UW into DDS, including Socrative's "mobile clicker" polling to track attendance and a Catalyst site for members to access all of our club's resources. Joelle enjoys both the clinical and research aspects of dentistry, and her passion is driven by her experience—she is an active researcher in UW's Department of Restorative Dentistry, as well as a dental assistant in both a general practice and a specialty clinic. Aside from dentistry, Joelle enjoys watching makeup tutorials and coloring. </p>
 						<p>Contact Joelle at <a href="mailto:jmoussi@uw.edu">jmoussi@uw.edu</a>.</p>
 					</td>
 				</tr>
 				<tr>
 					<th>
-						<h2>Halley Flake</h2>
-						<h3>Volunteer Coordinator, Senior Majoring in Environmental Health</h3>
+						<h2>Stephanie Calasanz</h2>
+						<h3>Volunteer Coordinator, Second-Year Majoring in General Biology, Human Rights Minor</h3>
 					</th>
 					<th>
 						<h2>Divya Madhavan</h2>
-						<h3>Public Relations, Sophomore Majoring in Microbiology</h3>
+						<h3>Public Relations, Junior Majoring in Microbiology</h3>
 					</th>
 				</tr>
 				<tr>
 					<td>
 						<span class="imagetogif">
-							<img src="images/cat.png" class="image">
-							<img src="images/cat.gif" class="gif">
+							<img src="images/stephanie.png" class="image">
+							<img src="images/stephanie.png" class="gif">
 						</span>
-						<p>I'm pursuing dentistry because I love helping people obtain confidence with their smile.</p>
-						<p>I love biking and have finished 2 triathlons.</p>
-						<p>Contact Halley at <a href="mailto:hflake@uw.edu">hflake@uw.edu</a>.</p>
+						<p>I am Stephanie Calasanz and pleased to serve as Volunteer Coordinator for the 16-17 school year! I went to Capital High School and South Puget Sound Community College in Olympia, and received my Associates in Art and Biology.</p>
+						<p>My goal for DDS is to develop strong relationships in the community and allow our members to be exposed to character-building experiences, gain new skills, and be able to obtain a new perspective in life while recognizing their privileges.</p>
+						<p>Dentistry is my love because it is a melting pot of things I love and look forward to - science, strong interpersonal skills, developing trusting relationships with patients, artsy and hands-on procedures, and making people smile. After having the worst teeth, orthodontic treatment helped my confidence, communication skills and allowed me to grow into my affable self.</p>
+						<p>I cannot wait to have this effect on my future patients and to provide them with a smile that will bring lots of happiness and success to their lives.</p>
+						<p>Contact Stephanie at <a href="mailto:calasanz@uw.edu">calasanz@uw.edu</a>.</p>
 					</td>
 					<td>
 						<span class="imagetogif">
-							<img src="images/cat.png" class="image">
-							<img src="images/cat.gif" class="gif">
+							<img src="images/divya.png" class="image">
+							<img src="images/divya.png" class="gif">
 						</span>
 						<p>There are definitely many compelling reasons to choose dentistry as a career. Personally, shadowing at dental clinics dramatically shaped my professional goal. I realized that work can be an expression of the general intention of one’s life rather than simply an activity or a means to a certain lifestyle. I was able to identify my true passion within this field and I believe that a smile is the most precious gift you can give to a child.</p>
-						<p>I wanted to be a news anchor and a weather woman before I decided on dentistry & I'm scared of the dentist.</p>
 						<p>Contact Divya at <a href="mailto:divya14@uw.edu">divya14@uw.edu</a>.</p>
 					</td>
 				</tr>
 				<tr>
 					<th>
-						<h2>Dina Bassyiouni</h2>
-						<h3>Activities Coordinator, Sophomore Majoring in Biology</h3>
+						<h2>Edward Kuo</h2>
+						<h3>Activities Coordinator, Junior Majoring in General Biology</h3>
 					</th>
 					<th>
-						<h2>Dorothy Nguyen</h2>
-						<h3>Webmaster, Senior Majoring in Molecular, Cellular, Developmental Biology</h3>
+						<h2>George Sun</h2>
+						<h3>Webmaster, Sophomore Majoring Bioengineering</h3>
 					</th>
 				</tr>
 				<tr>
 					<td>
 						<span class="imagetogif">
-							<img src="images/cat.png" class="image">
-							<img src="images/cat.gif" class="gif">
+							<img src="images/edward.png" class="image">
+							<img src="images/edward.png" class="gif">
 						</span>
-						<p>Growing up I hated going to the dentist. Like many children, to me it was just a scary place with sharp tools and injections that hurt. It wasn't until I went to pediatric dentist who explained what he was doing the whole time, that I realized dentists weren't so mean after all. As years passed, my dislike to the visit faded and my interest in dentistry grew. I hope to one day be able to make children coming to the dentist see that it isn't as scary as they thought!</p>
-						<p>I started swimming before I could walk!</p>
-						<p>Contact Dina at <a href="mailto:dinaalb@uw.edu">dinaalb@uw.edu</a>.</p>
+						<p>Interesting things about myself is that I've lived in 3 different countries: Taiwan, Canada and here in the States. One cool thing I've done this summer is I visited the east coast for the first time. In my spare time, you can find me going on runs to gas works, hiking with my friends or just sitting in my room watching Youtube. The reason why I'm excited about dentistry is the artistic aspect of the career where we get to work side by side with the patient to maintain great oral health hygiene while achieving an aesthetically pleasing smile.</p>
+						<p>Contact Edward at <a href="mailto:ycekuo96@uw.edu">ycekuo96@uw.edu</a>.</p>
 					</td>
 					<td>
 						<span class="imagetogif">
-							<img src="images/cat.png" class="image">
-							<img src="images/cat.gif" class="gif">
+							<img src="images/george.png" class="image">
+							<img src="images/george.png" class="gif">
 						</span>
-						<p>Throughout my childhood growing up, I always had a positive association with going to the dentist. My shadowing experiences in the dental clinics have allowed me to observe how dentists as healthcare providers reach out to others and provide to their oral health and hygiene needs. I loved how dentistry gives people a boost of confidence even in the simplest actions of improving their smiles. I believe the greatest joy is knowing when I can assist in placing a beautiful smile on someone's face.</p>
-						<p>I really enjoy nature hikes and I also like running 5Ks in my spare time.</p>
-						<p>Contact  at <a href="mailto:ddtn2@uw.edu">ddtn2@uw.edu</a>.</p>
+						<!-- <p></p> -->
+						<p style="font-family: Courier">&lt;!-- officer biography will be added later --&gt;</p>
+						<p>Contact George at <a href="mailto:gmsun@uw.edu">gmsun@uw.edu</a>.</p>
 					</td>
 				</tr>
 			</table>
