--- a/resources.html
+++ b/resources.html
@@ -1,9 +1,12 @@
 <head>
 	<title>Resources | Delta Delta Sigma</title>
-	<script src="javascripts/jquery.min.js"></script>
-	<script src="javascripts/main.js"></script>
+	<script type="text/javascript" src="javascripts/jquery.min.js"></script>
+	<script type="text/javascript" src="javascripts/main.js"></script>	
 	<section id="javascript">If this message appears after reloading, your browser may not have JavaScript enabled.</section>
 </head>
 <body>
 	<section id="nav"></section>
+	<section class="container">
+
+	</section>
 </body>
