--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 	<title>Delta Delta Sigma</title>
-	<script src="javascripts/jquery.min.js"></script>
-	<script src="javascripts/main.js"></script>
+	<script type="text/javascript" src="javascripts/jquery.min.js"></script>
+	<script type="text/javascript" src="javascripts/main.js"></script>
 	<section id="javascript">If this message appears after reloading, your browser may not have JavaScript enabled.</section>
 </head>
 <body>
