Update preparing files for new officers

--- a/public_html/join.html
+++ b/public_html/join.html
@@ -1,5 +1,5 @@
 <head>
-	<title>Join | Delta Delta Sigma</title>
+	<title>Join - Delta Delta Sigma</title>
 	<script type="text/javascript" src="src/js/jquery.min.js"></script>
 	<script type="text/javascript" src="src/js/main.js"></script>	
 	<section id="javascript">If this message appears after reloading, your browser may not have JavaScript enabled.</section>
