--- a/public_html/officers-2017.html
+++ b/public_html/officers-2017.html
@@ -1,5 +1,5 @@
 <head>
-	<title>Officers - Delta Delta Sigma</title>
+	<title>Past Officers 2017 - Delta Delta Sigma</title>
 	<script type="text/javascript" src="src/js/jquery.min.js"></script>
 	<script type="text/javascript" src="src/js/main.js"></script>	
 	<section id="javascript">If this message appears after reloading, your browser may not have JavaScript enabled.</section>
@@ -128,8 +128,6 @@
 					</td>
 				</tr>
 			</table>
-			<h1 id="officers">Past Officers</h1>
-			<a href="officers-2017.html"><p>2016-2017</p></a>
 		</div>
 	</section>
 </body>
